--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/imgs/portImg.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/imgs/Me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redwan Portfolio</title>
+    <title>Sohel Portfolio</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
       </style>
